--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <input type="file" id="fileInput" accept=".glb,.usdz,model/glb,model/usdz">
     <model-viewer
       id="modelViewer"
-      src=""
-      ios-src=""
+      src="karaagekun.glb"
+      ios-src="karaagekun.usdz"
       ar
       ar-modes="webxr scene-viewer quick-look"
       camera-controls
