--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AR Web Page – USDZ & GLB Demo</title>
   <!-- Google Model Viewer component -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
@@ -49,6 +50,13 @@
       USDZ: iOS/Safari/Quick Look
     </div>
     <model-viewer
+      width: 100%;
+      max-width: 100vw;
+      height: 60vh; /* or adjust to 70vh or 80vw as needed */
+      min-height: 300px;
+      background: #e0e0e0;
+      border-radius: 8px;
+      margin-bottom: 18px;
       src="karaagekun.glb"
       ios-src="karaagekun.usdz"
       ar
