--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>AR Model Mobile Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Web Page – USDZ & GLB Demo</title>
-  <!-- Google Model Viewer component -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
@@ -18,45 +17,41 @@
       min-height: 100vh;
     }
     .container {
-      margin-top: 50px;
+      margin-top: 24px;
       background: #fff;
       border-radius: 12px;
       box-shadow: 0 4px 24px rgba(0,0,0,0.09);
-      padding: 32px 24px;
-      max-width: 400px;
+      padding: 16px 6vw;
+      max-width: 500px;
       width: 100%;
       text-align: center;
     }
     model-viewer {
       width: 100%;
-      height: 380px;
+      max-width: 100vw;
+      height: 60vh;
+      min-height: 320px;
       background: #e0e0e0;
       border-radius: 8px;
       margin-bottom: 18px;
+      display: block;
     }
-    .note {
-      font-size: 0.98em;
-      color: #555;
-      margin-bottom: 12px;
+    @media (max-width: 600px) {
+      .container {
+        padding: 8px 2vw;
+        margin-top: 8px;
+      }
+      model-viewer {
+        height: 50vh;
+        min-height: 200px;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>AR Demo: USDZ & GLB</h2>
-    <div class="note">
-      <b>Tip:</b> Tap the AR button on mobile!<br>
-      GLB: Android/Chrome/WebXR<br>
-      USDZ: iOS/Safari/Quick Look
-    </div>
+    <h2>AR Model Demo</h2>
     <model-viewer
-      width: 100%;
-      max-width: 100vw;
-      height: 60vh; /* or adjust to 70vh or 80vw as needed */
-      min-height: 300px;
-      background: #e0e0e0;
-      border-radius: 8px;
-      margin-bottom: 18px;
       src="karaagekun.glb"
       ios-src="karaagekun.usdz"
       ar
@@ -67,6 +62,9 @@
       autoplay
       exposure="1.2">
     </model-viewer>
+    <div style="font-size:0.95em;color:#555;">
+      Tip: Tap the AR button on mobile!
+    </div>
   </div>
 </body>
 </html>
